--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,7 @@ runs:
   using: "composite"
   steps:
     - name: Path to requirements.txt
-      run: echo ${{ inputs.PATH_TEST_FOLDER }}.
+      run: echo ${{ inputs.PATH_TO_REQUIREMENTS }}.
       shell: bash
     
     - name: Checkout
@@ -24,7 +24,7 @@ runs:
     - name: Install dependencies    
       run: |
         python -m pip install --upgrade pip
-        cd ${{ inputs.PATH_TEST_FOLDER }}
+        cd ${{ inputs.PATH_TO_REQUIREMENTS }}
         pip install -r requirements.txt    
       shell: bash
 
