adição de comando export PYTHONPATH

--- a/action.yml
+++ b/action.yml
@@ -30,6 +30,7 @@ runs:
 
     - name: Run tests    
       run: |
+        export PYTHONPATH=${{ inputs.PATH_TO_ROOT }}
         python -m pytest --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
         python -m pytest --cov
       shell: bash
