--- a/action.yml
+++ b/action.yml
@@ -32,8 +32,7 @@ runs:
       run: |
         export PYTHONPATH=${{ inputs.PATH_TO_ROOT }}
         cd ${{ inputs.PATH_TO_ROOT }}
-        python -m pytest --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
-        python -m pytest --cov
+        python -m pytest --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
       shell: bash
 
     - name: Upload report      
